<resources>
    <string name="app_name">News Article Search</string>
    <string name="hint">Enter search query</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="arts">Arts</string>
    <string name="Fashion">Fashion &amp; Style</string>
    <string name="sports">Sports</string>
    <string name="save">Save</string>
</resources>
