<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.nytimessearch.search.fragments.FilterFragment">

    <RelativeLayout
        android:id="@+id/filterSetting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/begin_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/beginDate"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="94dp" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:id="@+id/datePicker"
            android:calendarViewShown="false"
            android:layout_toRightOf="@+id/beginDate"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/sort_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sortOderText"
            android:layout_alignTop="@+id/sortOder"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sortOder"
            android:layout_toRightOf="@+id/sortOderText"
            android:layout_alignLeft="@+id/cbArts"
            android:layout_below="@+id/datePicker"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="25dp" />

        <TextView
            android:text="@string/news_desk_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newsDeskValues"
            android:layout_below="@+id/sortOder"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="27dp" />

        <CheckBox
            android:text="@string/arts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbArts"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/newsDeskValues"
            android:layout_alignTop="@+id/newsDeskValues" />

        <CheckBox
            android:text="@string/Fashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbFashion"
            android:layout_below="@+id/cbArts"
            android:layout_alignLeft="@+id/cbArts"
            android:layout_alignStart="@+id/cbArts" />

        <CheckBox
            android:text="@string/sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbSports"
            android:layout_below="@+id/cbFashion"
            android:layout_alignLeft="@+id/cbFashion"
            android:layout_alignStart="@+id/cbFashion" />

        <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:onClick="onSaveFilter"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</FrameLayout>
